# drone_ws

./: .gitignore  README.md
data/drone_state_function/: state_data_x.csv  state_data_y.csv  state_data_yaw.csv  state_data_z.csv
data/drone_state_function/state_function_matrix/: state_function_matrix.csv
data/drop_payload_on_jackal/: yolo_gazebo_pos_est.csv  yolo_gazebo_pos_est_2.csv
data/keypoint/: keypoints.csv
data/yolo_gazebo_pos_est/: yolo_gazebo_pos_est.csv
src/my_custom_msgs/: CMakeLists.txt  package.xml
src/my_custom_msgs/msg/: DroneState.msg  PnPDataYolo.msg
src/my_drone_model/: CMakeLists.txt  package.xml
src/my_drone_model/config/: controller.yaml  motor_pid_config.yaml  propeller_controller.yaml  quadrotor_velocity_controllers.yaml
src/my_drone_model/launch/: collect_drone_state.launch  collect_jackal_figure.launch  comparison_yolo_gazebo.launch  drop_payload_on_jackal.launch  drop_payload_on_jackal_gazebo.launch  drop_payload_on_jackal_yolo.launch  drop_payload_on_jackal_yolo_auto.launch  jackal.launch  move_drone2ref.launch  my_drone_gazebo.launch  quadrotor.launch  spawn_quadrotor.launch  test.launch  tracking_trajectory.launch
src/my_drone_model/scripts/: camera_pitch_controller.py  camera_pitch_controller_auto.py  collect_drone_state.py  collect_jackal_figure_drone_trajectory.py  collect_keypoint.py  comparison_yolo_gazebo_pos_est.py  delay_spawner.py  draw_cube.py  drop_payload_on_jackal_gazebo.py  drop_payload_on_jackal_yolo.py  drop_payload_on_jackal_yolo_auto.py  frame_link_pose.py  get_jackal_pos.py  gripper_controller.py  gripper_controller_auto.py  jackal_control_auto.py  kalman_filter_velocity_estimation.py  keypoint_detection.py  manual_control.py  manual_control_jackal.py  motorpid_plugin.py  move2ref.py  odometry_plugin.py  propeller_velocity_publisher.py  quadrotor_motor_controller.py  quadrotor_wrench_control.py  quadrotor_wrench_controller.py  save_image.py  sequential_launcher.py  thrust_calculator.py  tracking_trajectory.py
src/my_drone_model/src/: attach_detach_plugin.cpp  wrench_plugin.cpp
src/my_drone_model/urdf/: ball.urdf  frame_link.urdf  my_drone.xacro  object.urdf  quadrotor.urdf  quadrotor.urdf.xacro
src/my_drone_model/worlds/: empty_100hz.world
src/process_data/: calculate_state_function.py  plot_trajectory.py  plot_yolo_gazebo_comparison.py  test_state_function.py
src/train_yolo_model/: convert2yolo_format.py  data.yaml  train.py
src/train_yolo_model/jackal_detection_3d/: args.yaml  results.csv
(+2365 files in other folders)
